# intelliDj

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  csv_to_dj_pipeline.py  diagram.md  dj_candidates.csv  dj_to_slskd_pipeline.py  docker-compose-yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  spotify_export.csv  spotify_to_dj_pipeline.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/: beets.md  duplicates.md  output-format.md  recommendations.md  rekordbox.md  setup.md  slskd.md  spotify-export.md  traktor.md  ui.md  windows.md
scripts/: beets_import.ps1  beets_import.sh  dry_run_pipeline.ps1  dry_run_pipeline.sh  enrich_tags_from_spotify_csv.py  export_m3u_by_style.py  find_duplicate_tracks.py  install_keyfinder_cli.sh  install_python_deps.ps1  install_python_deps.sh  install_python_deps_pip.ps1  install_python_deps_pip.sh  normalize_loudness.ps1  normalize_loudness.sh
slskd_data/: slskd.yml
slskd_data/data/: browse.cache  events.db  events.db-shm  events.db-wal  messaging.db  search.db  shares.local.bak.db  transfers.db
slskd_data/data/misc/.DataProtection-Keys/: key-eec70c1d-e01b-4a83-9b40-6003dba177cb.xml
tests/: conftest.py  test_csv_to_dj_pipeline.py  test_dj_to_slskd_pipeline.py  test_enrich_tags_from_spotify_csv.py  test_export_m3u_by_style.py  test_find_duplicate_tracks.py
ui/: streamlit_app.py  streamlit_duplicates_app.py
