[tool.poetry]
name = "intellidj"
version = "0.1.0"
description = "DJing tools to select, download, organize and enrich music"
authors = ["yenkz <cpecile@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
beets = "*"
slskd-api = "*"
typing_extensions = "*"
requests = "*"
mutagen = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
